--- a/README
+++ b/README
@@ -7,7 +7,7 @@ Ensure your configuration files are pointing to the correct path.
 
 Run the following from the main root dir:
 
-NODE_ENV=development node_modules/jitter/bin/jitter -lt src/coffee src/js src/js/app.js
+NODE_ENV=development PORT=3000 node_modules/jitter/bin/jitter -lt src/coffee src/js src/js/app.js
 
 As changes are made to the src/coffee directory, they are linted and recompiled into
 src/js, tests are run, and the node server restarted. This workflow is enabled by Jitter.
